# VFF-assignment

./: README.md
ball_follower/: package.xml  setup.py
ball_follower/ball_follower/: ball_follower.py
ball_follower/scripts/: ball_tracker.py
ball_follower/scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ball_follower/scripts/log/: latest_build
ball_follower/unit_sphere/: model.sdf
ball_follower/waffle/: model.config  model.sdf
vff_avoidance/: CMakeLists.txt  avoidance_test  package.xml
vff_avoidance/config/: AvoidanceNodeConfig.yaml
vff_avoidance/launch/: avoidance_vff.launch.py
vff_avoidance/src/: avoidance_node.cpp
