<?xml version="1.0"?>
<package format="3">
  <name>ball_follower</name>
  <version>0.0.0</version>
  <description>Ball following robot using ROS2 and computer vision</description>
  <maintainer email="abedmostafaa94@gmail.com">abed</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
